infrastructure/ingress-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-service-prefix
  namespace: vroom-dev
spec:
  stripPrefix:
    prefixes:
      - /user-service
      - /ride-service
      - /notification-service
      - /dispatch-service
      - /prometheus
      - /grafana
      - /jaeger
      - /argocd
